--- a/makefiles/Makefile_cpp
+++ b/makefiles/Makefile_cpp
@@ -4,7 +4,9 @@
 
 .SUFFIXES: .F .d .o .f90 .for
 
-CP2KHOME  = $(HOME)/cp2k
+# the home dir is taken from the current directory: you must cd to the makefiles
+# directory before executing make
+CP2KHOME  := $(PWD)/..
 ARCH      = $(shell $(CP2KHOME)/tools/get_arch_code)
 VERSION   = sopt
 SMAKE     = $(MAKE) -r
@@ -18,7 +20,7 @@ MAINEXEDIR   = $(CP2KHOME)/exe
 MAINLIBDIR   = $(CP2KHOME)/lib
 MAINOBJDIR   = $(CP2KHOME)/obj
 SRCDIR       = $(CP2KHOME)/src
-SRCDIRS      = $(SRCDIR):$(SRCDIR)/lib:$(SRCDIR)/pao
+SRCDIRS      = $(SRCDIR):$(SRCDIR)/lib
 TOOLDIR      = $(CP2KHOME)/tools
 MAKEFILE     = $(CP2KHOME)/makefiles/Makefile_cpp
 FORPAR       = $(CP2KHOME)/tools/forpar.x -chkint
@@ -56,7 +58,8 @@ include $(MACHINEDEFS)
 
 OBJECTS = $(OBJECTS_GENERIC) $(OBJECTS_ARCHITECTURE)
 
-LIB1_OBJECTS = ctrig.o fftpre.o fftrot.o fftstp.o mltfftsg.o fast.o
+LIB1_OBJECTS = ctrig.o fftpre.o fftrot.o fftstp.o fast.o \
+	           mltfftsg_tools.o mltfftsg.o
 
 DEPENDENCIES = $(OBJECTS:.o=.d)
 
@@ -82,7 +85,7 @@ endif
 vpath %.F $(SRCDIRS)
 
 %.f90: %.F
-	$(CPP) $(CPPFLAGS) -I$(SRCDIR) $< > $*.f90
+	$(CPP) $(CPPFLAGS) $< > $*.f90
 
 %.o: %.f90
 	$(FC) -c $(FCFLAGS) $<
@@ -91,7 +94,7 @@ vpath %.F $(SRCDIRS)
 	$(CPP) $(CPPFLAGS) -P $< > $*.for
 	$(FORPAR) $*.for
 	$(PERL) $(SFMAKEDEPEND) $*.d $*.for
-	@rm -f $*.d.old
+	@rm -f $*.d.old $*.for
 
 parallel_include.o: parallel_include.f90
 	$(FC_fixed) -c $(FCFLAGS) $*.f90
