--- a/makefiles/Makefile.old
+++ b/makefiles/Makefile.old
@@ -3,7 +3,7 @@
 CP2KHOME  = $(HOME)/cp2k
 ARCH      = $(shell $(CP2KHOME)/tools/get_arch_code)
 VERSION   = sopt
-SMAKE     = gmake -r
+SMAKE     = $(MAKE) -r
 PMAKE     = $(SMAKE) -j 1
 LIB1      = cp2klib
 
@@ -14,6 +14,8 @@ MAINEXEDIR   = $(CP2KHOME)/exe
 MAINLIBDIR   = $(CP2KHOME)/lib
 MAINOBJDIR   = $(CP2KHOME)/obj
 SRCDIR       = $(CP2KHOME)/src
+TOOLDIR      = $(CP2KHOME)/tools
+MAKEFILE     = $(CP2KHOME)/makefiles/Makefile
 FORPAR       = $(CP2KHOME)/tools/forpar.x -chkint
 SFMAKEDEPEND = $(CP2KHOME)/tools/sfmakedepend -m int -s -f
 MACHINEDEFS  = $(ARCHDIR)/$(ARCH).$(VERSION)
@@ -21,8 +23,7 @@ PROG         = $(EXEDIR)/cp2k.$(VERSION)
 EXEDIR       = $(MAINEXEDIR)/$(ARCH)
 LIBDIR       = $(MAINLIBDIR)/$(ARCH)
 OBJDIR       = $(MAINOBJDIR)/$(ARCH)
-VPATH        = $(SRCDIR)
-MAKEFILE     = $(SRCDIR)/Makefile
+VPATH        = $(SRCDIR):$(SRCDIR)/lib
 OBJECTDEFS   = $(SRCDIR)/OBJECTDEFS
 LIB1_ARCHIVE = $(LIBDIR)/$(VERSION)/lib$(LIB1).a
 
@@ -35,15 +36,12 @@ CLEAN_TARGETS   = sopt/clean sdbg/clean popt/clean pdbg/clean\
 ### Master rules ###
 
 $(VERSION_TARGETS):
-	cd $(EXEDIR) || mkdir -p $(EXEDIR)
-	cd $(OBJDIR)/$@ || mkdir -p $(OBJDIR)/$@
-	$(SMAKE) -C $(OBJDIR)/$@ -f $(MAKEFILE) VERSION=$@ dependencies
-	$(PMAKE) -C $(OBJDIR)/$@ -f $(MAKEFILE) VERSION=$@ all
-
-$(LIB1_ARCHIVE):
-	cd $(LIBDIR)/$(VERSION) || mkdir -p $(LIBDIR)/$(VERSION)
-	$(PMAKE) -C $(SRCDIR)/lib -f $(MAKEFILE) VERSION=$(VERSION) $(LIB1)
-	$(SMAKE) -C $(SRCDIR)/lib -f $(MAKEFILE) clean
+	@cd $(EXEDIR) || mkdir -p $(EXEDIR)
+	@cd $(OBJDIR)/$@ || mkdir -p $(OBJDIR)/$@
+	@cd $(LIBDIR)/$@ || mkdir -p $(LIBDIR)/$@
+	@$(SMAKE) -C $(TOOLDIR)
+	@$(SMAKE) -C $(OBJDIR)/$@ -f $(MAKEFILE) VERSION=$@ dependencies
+	@$(PMAKE) -C $(OBJDIR)/$@ -f $(MAKEFILE) VERSION=$@ all
 
 $(CLEAN_TARGETS):
 	$(SMAKE) -C $(OBJDIR)/$(@D) -f $(MAKEFILE) VERSION=$(@D) $(@F)
@@ -54,7 +52,8 @@ include $(MACHINEDEFS)
 
 OBJECTS = $(OBJECTS_GENERIC) $(OBJECTS_ARCHITECTURE)
 
-LIB1_OBJECTS = ctrig.o fftpre.o fftrot.o fftstp.o mltfftsg.o fast.o
+LIB1_OBJECTS = ctrig.o fftpre.o fftrot.o fftstp.o fast.o \
+	           mltfftsg_tools.o mltfftsg.o
 
 DEPENDENCIES = $(OBJECTS:.o=.d)
 
@@ -64,42 +63,44 @@ LIBRARIES = -L$(LIBDIR)/$(VERSION) -l$(LIB1) $(LIBS)
 
 dependencies: $(DEPENDENCIES)
 
-all: lib$(LIB1) $(PROG)
+all: $(PROG)
 
-lib$(LIB1): $(LIB1_ARCHIVE)
-
-$(LIB1): $(LIB1_OBJECTS)
-	$(AR) $(LIB1_ARCHIVE) $(LIB1_OBJECTS)
-
-$(PROG): $(OBJECTS)
+$(PROG): $(OBJECTS) $(LIB1_ARCHIVE)
 	$(LD) $(LDFLAGS) -o $(PROG) $(OBJECTS) $(LIBRARIES)
+
+$(LIB1_ARCHIVE): $(LIB1_OBJECTS)
+	$(AR) $(LIB1_ARCHIVE) $(LIB1_OBJECTS)
+ifneq ($(RANLIB),)
+	$(RANLIB) $(LIB1_ARCHIVE)
+endif
 
 %.o: %.F
 	$(FC) -c $(FCFLAGS) $<
 
 %.d: %.F
-	$(CPP) $(CPPFLAGS) $< $*.f
-	-$(FORPAR) $*.f
+	$(CPP) $(CPPFLAGS) $< > $*.f
+	$(FORPAR) $*.f
 	$(PERL) $(SFMAKEDEPEND) $*.d $*.f
-	rm -f $*.f $*.d.old
+	@rm -f $*.d.old
 
 parallel_include.o: parallel_include.F
 	$(FC_fixed) -c $(FCFLAGS) $<
 
 parallel_include.d: parallel_include.F
-	$(CPP) $(CPPFLAGS) $< $*.f
+	$(CPP) $(CPPFLAGS) $< > $*.f
 	-$(FORPAR) -fix $*.f
 	$(PERL) $(SFMAKEDEPEND) $*.d $*.f
 	@rm -f $*.d.old
 
 clean:
-	rm -f *.o *.mod F*.f
+	rm -f *.o *.mod
 
 realclean: clean
-	rm -f $(PROG) *.d *.int *~ *.lst
+	rm -f $(PROG) *.f *.d *.int *~ *.lst
 
 distclean:
 	rm -rf $(MAINEXEDIR) $(MAINLIBDIR) $(MAINOBJDIR)
+	$(SMAKE) -C $(TOOLDIR) realclean
 
 ### Load the automatically generated rules of sfmakedepend ###
 
